css/master.css
:root {
  /* Dark mode color palette */
  --DarkModeBackgroundColor: rgb(25, 25, 25);
  --DarkModeFontColor: rgb(189, 189, 189);
  --DarkModeFancyColor: rgb(73, 201, 35);
  --DarkModeEmphFontColor: rgb(255, 255, 255);
  --DarkModeGridItemColor: rgb(51, 51, 51);
  --DarkModeNavBarColor: rgb(37, 37, 37);

  /* Light mode color palette */
  --LightModeBackgroundColor: rgb(246, 246, 246);
  --LightModeFontColor: rgb(54, 53, 53);
  --LightModeFancyColor: rgb(13, 79, 185);
  --LightModeEmphFontColor: rgb(0, 0, 0);
  --LightModeGridItemColor: rgb(201, 201, 201);
  --LightModeNavBarColor: rgb(224, 224, 224);

  /* Master variables */
  --BackgroundColor: var(--DarkModeBackgroundColor);
  --FontColor: var(--DarkModeFontColor);
  --FancyColor: var(--DarkModeFancyColor);
  --EmphFontColor: var(--DarkModeEmphFontColor);
  --GridItemColor: var(--DarkModeGridItemColor);
  --NavBarColor: var(--DarkModeNavBarColor);
  --NavBarActiveColor: var(--FancyColor);
  --NavBarSeparatorColor: rgb(51, 51, 51);
  --TextHoverColor: rgb(93, 93, 93);
  --UnselectedBorderColor: rgb(121, 121, 121);
  --TextFontSize: 1.2em;
  --ColumnWidth: 55vw;
  --NavSeparatorWidth: 0.8vw;
  --TopMarginToHeader: 6.2vh;
  --IconRotationAngle: 45deg;
  scroll-behavior: smooth;
}
body {
   transition: opacity 0.4s;
   opacity: 0;
   background-color: var(--BackgroundColor);
   /* font-family: 'Open Sans', sans-serif; */
   /* font-family: 'Lato', sans-serif; */
   font-family: sans-serif;
}
html, body {
  margin: 0px;
  padding: 0px;
}
a {
  text-decoration: none;
  color: var(--FancyColor);
}
.page-intro {
  width: var(--ColumnWidth);
  margin-top: var(--TopMarginToHeader);
  margin-left: calc( (100vw - var(--ColumnWidth)) / 2);
  background-color: var(--BackgroundColor);
  color: var(--FontColor);
  font-size: calc(1 * var(--TextFontSize));
  text-align: justify;
}
#navbar-container {
  position: -webkit-sticky;
  position: -moz-sticky;
  position: sticky;
  top: 0px;
  height: 7vh;
  padding-top: 1.5em;
  background-color: var(--BackgroundColor);
  z-index: 2;
}
#navbar {
  text-align: center;
  background-color: inherit;
}
.navbar-item {
  color: var(--FontColor);
  font-size: 2.0vw;
  text-align: center;
  margin-left: var(--NavSeparatorWidth);
  margin-right: var(--NavSeparatorWidth);
  padding-bottom: 1vh;
  display: inline-block;
  cursor: pointer;
  background-color: inherit;
}
.navbar-item:hover {
  color: var(--EmphFontColor);
}
#navbar-line-separator {
  width: 50vw;
  margin-left: 25vw;
  height: 0px;
  border-bottom: var(--NavBarSeparatorColor) solid 3px;
}
#my-logo-container {
  position: absolute;
  top: 0.3em;
  left: 7vw;
}
#my-logo {
  width: 5em;
}
#settings-container {
  position: absolute;
  top: 1.3em;
  left: 80vw;
  width: 15vw;
}
#settings-icon {
  display: block;
  margin: auto;
  padding: 0;
  width: 2.6vw;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
}
#settings-icon:active {
  -webkit-animation: icon-rotation 1s;
  animation: icon-rotation 1s;
}
@keyframes icon-rotation {
  0% {transform: rotate(0deg);}
  50% {transform: rotate(var(--IconRotationAngle));}
}
@-webkit-keyframes icon-rotation {
  0% {-webkit-transform: rotate(0deg);}
  50% {-webkit-transform: rotate(var(--IconRotationAngle));}
}
.settings-item {
  display: none;
  cursor: pointer;
  color: var(--FontColor);
  background-color: var(--BackgroundColor);
  width: 100%;
  height: 5vh;
  /* border-left: 1px solid var(--FontColor);
  border-right: 1px solid var(--FontColor); */
  font-size: 2.0vw;
  text-align: center;
  margin: 0vw;
  padding-top: 1vh;
}
.settings-item:hover {
  background-color: var(--TextHoverColor);
}
#page-container {
  position: relative;
  min-height: 100vh;
}
#content-wrap {
  padding-top: 5vh;
  padding-bottom: 15vh;
}
#footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 15vh;
  display: inline-block;
  margin-top: 1.5em;
  background-color: var(--BackgroundColor);
}
#footer-content {
  background-color: inherit;
  color: var(--FontColor);
  text-align: center;
  width: 100%;
}
#credits-container {
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  width: 40%;
  margin-top: 3em;
  margin-bottom: 3em;
}
#myname {
  display: inline-block;
  color: var(--FontColor);
  font-size: calc(0.9 * var(--TextFontSize));
  margin: 0.5em;
}
#code-symbol {
  margin: 0.5em;
  margin-right: 0em;
}
.footer-code-symbol {
  color: var(--FancyColor);
  font-size: 2em;
  display: inline-block;
  font-family: monospace;
}
#cc-license {
  margin: 0.5em;
  margin-right: 0;
  margin-bottom: 0em;
  vertical-align:sub;
  border-width: 0;
  width: 4em;
}
#footer-contact-logo-container {
  width: 30%;
  display: none;
  text-align: center;
  vertical-align: middle;
  margin-top: 3em;
  margin-bottom: 3em;
}
.footer-contact-logo {
  width: 2.5em;
  margin-left: 1.2em;
  margin-right: 1.2em;
  margin-top: 0;
}
#my-footer-logo {
  width: 2em;
  display: none;
}
#return-arrow-container {
  display: none;
  margin: 0;
  width: 30%;
  height: 100%;
}

#menu {
  display: none;
}
.burguer-bracket {
  color: var(--FancyColor);
  font-size: 4em;
  display: inline-block;
  margin: 0;
}
.burguer-bracket, .nav-burguer-meat, #burger-meat-container #burguer-menu {
  display: none;
}

/*Blog and Research topic tags*/
.topictag {
  --tagwidth: 5.2em;
  display: inline-block;
  margin-top: 3%;
  width: var(--tagwidth);
  font-size: 0.9em;
  border-radius: 10px;
  color: var(--LightModeFontColor);
  text-align: center;
}
#tag-container {
  text-align: right;
}

#return-to-start-arrow {
  display: none;
  position: fixed;
  top: 90vh;
  left: 85vw;
  width: 2em;
  height: 2em;
  color: var(--UnselectedBorderColor);
  opacity: 0.65;
  border-top: 1em solid;
  border-right: 1em solid;
  border-radius: 10%;
  transform: rotate(-45deg);
  cursor: pointer;
}
#return-to-start-arrow:hover {
  color: var(--FancyColor);
}

/* Scroll bar */
::-webkit-scrollbar {
  width: 0.5vw;
  background-color: var(--BackgroundColor);
}
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 0.25vw grey;
  border-radius: 0.5vw;
}
::-webkit-scrollbar-thumb {
  background: var(--FancyColor);
  border-radius: 0.5vw;
}
::-webkit-scrollbar-thumb:hover {
  background: var(--FancyColor);
}

/* Adjust display for mobile */
@media only screen and (max-width: 768px) {
  #footer-contact-logo-container {
    width: 100%;
  }
  #credits-container {
    width: 100%;
    margin-top: 0em;
  }
  #return-arrow-container {
    width: 100%;
  }
  #return-to-start-arrow {
    display: none;
  }
}
@media only screen and (max-width: 400px) {
  #return-to-start-arrow {
    /* top: 70vh; */
    left: 75vw;
  }
}
@media only screen and (max-width: 768px) and (orientation: portrait) {
  :root {
    --ColumnWidth: 80vw;
    /* --TextFontSize: 1.2em; */
  }
  #footer-content {
    font-size: 1.1em;
  }
  /* .footer-code-symbol {
    font-size: 3.5vw;
  } */
  #my-logo-container {
    display: none;
  }
  #navbar-container {
    padding-top: 0;
  }
  #navbar {
    position: absolute;
    top: 6vh;
    width: 100vw;
    margin: 0;
    padding-top: 3vh;
    display: none;
    text-align: left;
    background-color: inherit;
    background-color: var(--GridItemColor);
  }
  .navbar-item {
    display: inherit;
    font-size: 4vh;
    text-align: left;
    margin-left: 5.5vh;
  }
  #navbar-line-separator {
    display: none;
  }
  #burguer-menu {
    display: block;
    margin-left: 5vh;
    cursor: pointer;
    background-color: inherit;
  }
  #menu:checked ~ #navbar {
    display: block;
  }
  .burguer-bracket {
    display: inline-block;
    font-size: 9vw;
  }
  #burguer-meat-container {
    display: inline-block;
  }
  .nav-burguer-meat {
    display: block;
    width: 9vw;
    height: 1vw;
    margin-top: 2.7vw;
    margin-left: 0.2vw;
    margin-right: 0.2vw;
    margin-bottom: -1vw;
    background-color: var(--FontColor);
  }
  #settings-container {
    top: 0.5em;
    left: 65vw;
    width: 35vw;
  }
  #settings-icon {
    width: 7vw;
  }
  .settings-item {
    font-size: 3vh;
  }
}

@media only screen and (max-width: 768px) and (orientation: landscape) {
  .navbar-item {
    font-size: 2.5vw;
  }
  #my-logo-container {
    top: 0.5em;
  }
  #my-logo {
    width: 3em;
  }
  #settings-icon {
    width: 4vw;
  }
  #footer-content {
    font-size: 1.1em;
  }
  #navbar-line-separator {
    display: block;
  }
}

